# strutext

./: .clang-format  CMakeLists.txt  README.md
automata/: CMakeLists.txt  ac_iterator.h  aho_corasick.h  attr_fsm.h  automata.cpp  automata.h  compact_trie.h  flat_transitions.h  flex_transitions.h  fsm.h  fsm_defs.h  nfa.h  nfa_operations.h  nfa_printer.h  serializer.h  trie.h
automata/test/: CMakeLists.txt  ac_test.cpp  trie_test.cpp
cmake/: AddBoostTests.cmake  Build.cmake  FindLog4cplus.cmake
encode/: CMakeLists.txt  char_iterator.h  char_unicode32_decoder.cpp  char_unicode32_decoder.h  utf8_generator.h  utf8_iterator.h
encode/test/: CMakeLists.txt  char_iterator_test.cpp  utf8_iterator_test.cpp
examples/: CMakeLists.txt  morpher.cpp  symbol_iterator.cpp
lex/: ngram_iterator.h
morpho/: CMakeLists.txt
morpho/alphabets/: alphabet.h  eng_alphabet.h  rus_alphabet.h
morpho/aot/: CMakeLists.txt  aot_parser.h  eng_aot_parser.h  eng_morphs.txt  eng_tabs.txt  main.cpp  rus_aot_parser.h  rus_tabs.txt
morpho/models/: CMakeLists.txt  eng_model.h  eng_model_description.h  model.h  rus_model.h  rus_model_description.h
morpho/models/test/: CMakeLists.txt  rus_model_test.cpp  test.cpp
morpho/morpholib/: CMakeLists.txt  base_storage.cpp  base_storage.h  morpho.cpp  morpho.h  morpho_modifier.h  suffix_storage.cpp  suffix_storage.h
morpho/morpholib/test/: CMakeLists.txt  test.cpp
re/: CMakeLists.txt  ansi_symbol_set.h  parser.h  re.cpp  symbol_set.h
re/test/: CMakeLists.txt  ansi_symbol_set_test.cpp
style/: cpplint.py  style_check.sh  style_check_dir.sh
symbols/: CMakeLists.txt  st_generator.py  symbols.h  unihan_generator.py  unihan_table.cpp
symbols/test/: CMakeLists.txt  test.cpp
ut-data/: ut_main.cpp
utility/: filter_iterator.h  ngram_iterator.h  symbol_iterator.h  word_iterator.h
utility/test/: CMakeLists.txt  test.cpp
